Retry at the icon formatting
Was not getting the smaller logo with a white padding. Should match Flavor Awesome now.

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -5,7 +5,7 @@
     {
       "purpose": "any",
       "sizes": "512x512",
-      "src": "/fh.png",
+      "src": "/fh_rounded.png",
       "type": "image/png"
     }
   ],
