--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 	},
 	"dependencies": {
 		"@fontsource-variable/roboto": "^5.2.6",
-		"dexie": "^4.0.11",
+		"dexie": "^4.2.0",
+		"dexie-cloud-addon": "^4.2.0",
 		"suncalc": "^1.9.0"
 	}
 }
